<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_itinerary"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/nav_itinerary_text" />

    <item
        android:id="@+id/navigation_places"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/nav_places_text" />

    <item
        android:id="@+id/navigation_people"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/nav_people_text" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/nav_chat_text" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/nav_profile_text" />

</menu>
