<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_padding"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_activity_heading"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:text=""
            android:textSize="@dimen/error_text_size"
            android:textColor="@color/colorRed"
            android:layout_below="@id/heading"/>

        <EditText
            android:id="@+id/firstName"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname_hint_text"
            android:text=""
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorBlack"
            android:layout_below="@+id/error_text" />

        <EditText
            android:id="@+id/lastName"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname_hint_text"
            android:text=""
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorBlack"
            android:layout_below="@+id/firstName" />

        <Spinner
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/gender_spinner_strings"
            android:layout_below="@+id/lastName"/>

        <Spinner
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/age_spinner_strings"
            android:layout_below="@+id/gender"/>

        <EditText
            android:id="@+id/bio"
            android:inputType="textImeMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bio_hint_text"
            android:text=""
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorBlack"
            android:layout_below="@+id/age" />

        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint_text"
            android:text=""
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorBlack"
            android:layout_below="@+id/bio" />

        <EditText
            android:id="@+id/phone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint_text"
            android:text=""
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorBlack"
            android:layout_below="@+id/email" />

        <EditText
            android:id="@+id/social"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/social_hint_text"
            android:text=""
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorBlack"
            android:layout_below="@+id/phone" />

        <EditText
            android:id="@+id/likes"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/like_hint_text"
            android:text=""
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorBlack"
            android:layout_below="@+id/social" />

        <Button
            android:id="@+id/addLikeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_like_button_text"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGreen"
            android:layout_below="@+id/likes"/>

        <TextView
            android:id="@+id/likesListHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_list_heading_hint_text"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorBlack"
            android:layout_below="@id/addLikeButton"/>

        <TextView
            android:id="@+id/likesList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/like_list_hint_text"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorBlack"
            android:layout_below="@id/likesListHeading"/>

        <Button
            android:id="@+id/updateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/updateTrip_button_text"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGreen"
            android:layout_below="@+id/likesList"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/cancel_button_text"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorWhite"
            android:background="@color/colorRed"
            android:layout_below="@+id/updateProfile"/>

        <include
            layout="@layout/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/cancelButton"/>

    </RelativeLayout>
</ScrollView>