<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/username"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint_text"
        android:textSize="25dp"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/appIcon" />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint_text"
        android:textSize="25dp"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/username" />

    <TextView
        android:id="@+id/error_text"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dp"
        android:textColor="@color/colorRed"
        android:background="@color/colorWhite"
        android:layout_below="@id/password"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:textSize="25dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorGreen"
        android:layout_below="@+id/error_text" />

    <TextView
        android:id="@+id/sign_up_button"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_text"
        android:textSize="20dp"
        android:textColor="@color/colorSkyBlue"
        android:background="@color/colorWhite"
        android:layout_below="@id/login_button"
        android:layout_alignParentLeft="true"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/forgot_password_button"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_button_text"
        android:textSize="20dp"
        android:textColor="@color/colorSkyBlue"
        android:background="@color/colorWhite"
        android:layout_below="@id/login_button"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:focusable="true" />

</RelativeLayout>