<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding" >

    <TextView
        android:id="@+id/heading"
        android:paddingTop="@dimen/text_padding"
        android:paddingBottom="@dimen/text_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_trip_activity_heading"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorBlack"/>

    <AutoCompleteTextView
        android:id="@+id/place"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cityname_hint_text"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorBlack"
        android:drawableRight="@drawable/ic_place_black_24dp"
        android:drawablePadding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <EditText
        android:id="@+id/fromDate"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fromDate_hint_text"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorBlack"
        android:clickable="true"
        android:drawableRight="@drawable/ic_date_range_black_24dp"
        android:drawablePadding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/place" />

    <EditText
        android:id="@+id/toDate"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/toDate_hint_text"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorBlack"
        android:clickable="true"
        android:drawableRight="@drawable/ic_date_range_black_24dp"
        android:drawablePadding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/fromDate" />

    <Button
        android:id="@+id/saveTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveTrip_button_text"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorWhite"
        android:background="@color/colorGreen"
        app:layout_constraintTop_toBottomOf="@+id/toDate" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of de Finibus Bonorum et Malorum (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, Lorem ipsum dolor sit amet.., comes from a line in section 1.10.32.
The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from de Finibus Bonorum et Malorum by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
        "
        app:layout_constraintTop_toBottomOf="@+id/saveTrip"/>

</android.support.constraint.ConstraintLayout>